##Text encoding: utf-8

2013-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: do not destroy in NotifyEmpty () when empty
	and not standalone.
	* libs/gcp/mesomery.cc: do not allow destruction when inside a reaction.

2012-12-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice-0.10 >= 0.10.0.

2012-12-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fix non bonding electon pairs in anions.

2012-12-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* README: update goffice version.
	* libs/gcp/application.cc: allow arrows outside of reaction or mesomery.
	* plugins/paint/selection/selectiontool.cc: fix reaction construction.

2012-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/groupdlg.cc: fixed crash when ungrouping.

2012-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixed rules for mesomery.
	* plugins/paint/selection/selectiontool.cc: fixed mesomery construction.

2012-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/group.cc: don't crash when loading a group.

2012-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/poly-line.cc: don't access invalid memory.
	* libs/gcp/application.cc: allow a mesomery inside a reaction.
	* libs/gcp/brackets.cc: allow brackets around a mesomery.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/reaction.cc: allow a mesomery inside a reaction.
	* plugins/paint/selection/bracketstool.cc: fixed an uninitialized data
	issue.

2012-10-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.15.0).
	* libs/gcp/bond.cc: fix squiggle bonds period.
	* plugins/paint/bonds/bondtool.cc: ditto.

2012-09-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/texttool.cc: don't use deprecated goffice function.

2012-09-29  Jean Bréfort  <jean.brefort@normalesup.org>