@@ -2,6 +2,8 @@ Version 0.15.0
 	GChemPaint:
 		* Do not allow a mesomery setruction when inside a reaction.
 		* Fix molecule deletion inside a mesomery.
+	GCrystal:
+		* Fix row selection operations order in grids.
 
 Version 0.14.0
 	GChemPaint:
